PokerMain fixups